--- a/index.html
+++ b/index.html
@@ -18,4 +18,5 @@
     <div class="books"></div>
   </body>
   <script src="./src/js/script.js" type="module"></script>
+  <script src="./src/js/routie.js"></script>
 </html>
