--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="topnav">
+    <div class="header">
       <h1>Books</h1>
       <div class="search">
         <input id="input" type="search" placeholder="search..."></input>
