added related functionality

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="header">
       <h1><a href="#home"> Books </a></h1>
       <div class="search">
-        <input id="input" type="search" placeholder="search..."></input>
+        <input id="input" type="search" class="searchTerm" placeholder="search..."></input>
         <button id="searchButton" type="submit">go!</button>
       </div>
     </div>
