--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="header">
-      <h1><a href="#home"> Books </a></h1>
+      <h1><a href="/"> Books </a></h1>
       <div class="search">
         <input id="input" type="search" class="searchTerm" placeholder="search..."></input>
         <button id="searchButton" type="submit">go!</button>
