git pages compatability

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <script src="./node_modules/oba-wrapper/js/index.js" type="module"></script>
+    <script src="./oba-wrapper/js/index.js" type="module"></script>
     <script src="./src/js/script.js" type="module"></script>
     <link rel="stylesheet" href="./src/css/styles.css" />
     <title>Document</title>
